update 252, verifier issue https://platform.jetbrains.com/t/plugin-verifier-package-com-jetbrains-python-is-not-found/1780